# ssl-core

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  casca-docker-compose.yaml  completo-docker-compose.yaml  docker-compose.debug.yaml  docker-compose.dev.yaml  docker-compose.lab.yaml  docker-compose.metrics.yaml  docker-compose.prod.yaml  docker-compose.robocup-2024-var.yaml  docker-compose.teste-robocup-2024-var.yaml  docker-compose.third-party-localhost.yaml  docker-compose.yaml  docker-compose2.yaml  redis-playback-docker-compose.yaml  requirements.txt  service.Dockerfile  service_registry.json  vision.Dockerfile
communication-ms/communication-jaiminho/: CMakeLists.txt  communication-jaiminho.Dockerfile
communication-ms/communication-jaiminho/.devcontainer/: devcontainer.json
communication-ms/communication-jaiminho/communication/: CMakeLists.txt  communication_main.cpp
communication-ms/communication-jaiminho/communication/controller/: CMakeLists.txt  consumer_controller.cpp  consumer_controller.h  icontroller.cpp  icontroller.h  producer_controller.cpp  producer_controller.h
communication-ms/communication-jaiminho/communication/messaging/receiver/: message_receiver.cpp  message_receiver.h  payload.cpp  payload.h  payload_mapper.cpp  payload_mapper.h
communication-ms/communication-jaiminho/communication/messaging/sender/: message_sender.cpp  message_sender.h
communication-ms/communication-jaiminho/communication/parameters/: parameters.cpp  parameters.h
communication-ms/communication-jaiminho/communication/processing/: CMakeLists.txt  communication_processor.cpp  communication_processor.h
communication-ms/communication-jaiminho/communication/processing/robot_command/: CMakeLists.txt  robot_command_mapper.cpp  robot_command_mapper.h
embedded/nucleo-f767zi/: CMakeLists.txt  Dockerfile  mbed-os.lib
embedded/nucleo-f767zi/.devcontainer/: Dockerfile  devcontainer.json
embedded/nucleo-f767zi/example/: CMakeLists.txt  example.proto  example_main.cpp  print.cpp  print.h
embedded/nucleo-f767zi/firmware/: CMakeLists.txt  firmware_main.cpp
experiments/cpp-modules/: CMakeLists.txt
experiments/cpp-modules/.devcontainer/: Dockerfile
experiments/cpp-modules/experimental/: CMakeLists.txt
experiments/mongocxx/: CMakeLists.txt
experiments/mongocxx/.devcontainer/: Dockerfile
experiments/mongocxx/service/: CMakeLists.txt  service_main.cpp
experiments/playback/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
experiments/playback/src/proto/: service.proto
vision-be/mock_impl/: CMakeLists.txt
vision-be/mock_impl/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  service.Dockerfile
vision-be/mock_impl/mock/: CMakeLists.txt  client_main.cpp
vision-be/mock_impl/mock/common/: CMakeLists.txt  concepts.h  publish_subscribe.cpp  publish_subscribe.h  utility.cpp  utility.h  zmq_publish_subscribe.cpp  zmq_publish_subscribe.h
vision-be/vision-panettone/: CMakeLists.txt
vision-be/vision-panettone/.devcontainer/: Dockerfile
vision-be/vision-panettone/microservice/: CMakeLists.txt  microservice_main.cpp
vision-be/vision-panettone/vision/: CMakeLists.txt  frame.txt  vision_main.cpp
vision-be/vision-panettone/vision/RepositoryFactory/: RepositoryAbstractFactory.h  RepositoryType.h
vision-be/vision-panettone/vision/RepositoryFactory/RepositoryFactoryMapping/: RepositoryFactoryMapping.cpp  RepositoryFactoryMapping.h
vision-be/vision-panettone/vision/RepositoryFactory/RepositoryFactoryMongoDB/: RepositoryFactoryMongoDB.cpp  RepositoryFactoryMongoDB.h
vision-be/vision-panettone/vision/data/: CMakeLists.txt  i_mongo_data.h  mongo_data.cpp
vision-be/vision-panettone/vision/data/Frame/: IFrameRepository.h
vision-be/vision-panettone/vision/data/frame/: CMakeLists.txt  frame_repository.cpp  i_frame_repository.h
vision-be/vision-panettone/vision/db/: CMakeLists.txt  frame_repository_mongodb.cpp  frame_repository_mongodb.h  imongodb_repository.h  irepository.h  irepository_factory.cpp  irepository_factory.h  mongodb_repository_factory.cpp  mongodb_repository_factory.h
vision-be/vision-panettone/vision/network/: CMakeLists.txt  ireceiver_communication.cpp  ireceiver_communication.h  isender_communication.cpp  isender_communication.h  poller.cpp  poller.h  receiver_communication_factory.cpp  receiver_communication_factory.h  receiver_communication_factory_mapping.cpp  receiver_communication_factory_mapping.h  sender_communication_factory.cpp  sender_communication_factory.h  sender_communication_factory_mapping.cpp  sender_communication_factory_mapping.h  socket.cpp  socket.h  udp_multicast_socket_receiver.cpp  udp_multicast_socket_receiver.h  zmq_publisher_socket.cpp  zmq_publisher_socket.h  zmq_receiver_communication.cpp  zmq_receiver_communication.h  zmq_sender_communication.cpp  zmq_sender_communication.h  zmq_subscriber_socket.cpp  zmq_subscriber_socket.h
vision-be/vision-panettone/vision/repository_factory/: CMakeLists.txt  repository_abstract_factory.cpp  repository_abstract_factory.h  repository_factory.cpp
vision-be/vision-panettone/vision/repository_factory/repository_factory_mapping/: CMakeLists.txt  repository_factory_mapping.cpp  repository_factory_mapping.h
vision-be/vision-panettone/vision/repository_factory/repository_factory_mongo_db/: CMakeLists.txt  repository_factory_mongo_db.cpp  repository_factory_mongo_db.h
vision-be/vision-panettone/vision/src/Ball/: Ball.cpp  Ball.h
vision-be/vision-panettone/vision/src/Field/: FIeld.cpp  Field.h
vision-be/vision-panettone/vision/src/Frame/: Frame.cpp  Frame.h
vision-be/vision-panettone/vision/src/Robot/: Robot.cpp  Robot.h
vision-be/vision-panettone/vision/src/Source/: Source.cpp  Source.h
vision-be/vision-panettone/vision/src/ball/: CMakeLists.txt  ball.cpp  ball.h
vision-be/vision-panettone/vision/src/field/: CMakeLists.txt  field.cpp  field.h
vision-be/vision-panettone/vision/src/frame/: CMakeLists.txt  frame.cpp  frame.h
vision-be/vision-panettone/vision/src/point/: CMakeLists.txt
vision-be/vision-panettone/vision/src/robot/: robot.cpp  (+2 more)
(+1447 files in other folders)
