########################################################################################################################

cmake_minimum_required(VERSION 3.29)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../../.cmake)

include(project)

########################################################################################################################

robocin_mbed_setup(TARGET NUCLEO_F767ZI TOOLCHAIN GCC_ARM)
project(nucleo-f767zi LANGUAGES CXX)

########################################################################################################################

robocin_cpp_project_setup(STANDARD 23 NO_SOURCE_DIRECTORY)

########################################################################################################################

add_subdirectory(example)

########################################################################################################################
